几个改动: 1. 调整警示信息的颜色 2. 输入快捷键改为 shift + enter 避免误发送 3. 修复刷新页面看不到 chat 最后消息的摘要 4. 修复关闭对话刷新仍然存在的 bug

--- a/src/assets/chat.css
+++ b/src/assets/chat.css
@@ -126,11 +126,11 @@
 
 
 .chat-notice{
-    color: yellow;
-    border-color: yellowgreen;
+    color: orange;
+    border-color: orange;
 }
 
 .chat-error {
-    color: red;
+    color: darkred;
     border-color: darkred;
 }
